build/resources/test/LO-2/ValidPrograms/test_48.lo
// *Good testcase*
// Declare and call a simple method
// main return value: 1
// Author: Tyler Collins


bool main() {
  {
    return true;
  }
}
