build/resources/test/LO-2/InvalidPrograms/test_11.lo
//bad case:incorrect return type

int main(){
    {
        return true;
    }
}

